finished the task

--- a/index.html
+++ b/index.html
@@ -88,32 +88,32 @@
                     <div class="boxes--element_text">
                         <h3 class="boxes--element_title">Lorem, ipsum.</h3>
                         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
-                        <a href="#">read more</a>
                     </div>
+                    <a href="https://www.instagram.com/p/CeoR4IVMJzF/?igshid=ZmRlMzRkMDU=">read more</a>
                 </div>
                 <div class="boxes--element">
                     <img src="/images/cat.png" alt="">
                     <div class="boxes--element_text">
                         <h3 class="boxes--element_title">Lorem, ipsum.</h3>
                         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
-                        <a href="#">read more</a>
                     </div>
+                    <a href="https://www.instagram.com/p/CfIBa0Ys5do/?igshid=ZmRlMzRkMDU=">read more</a>
                 </div>
                 <div class="boxes--element">
                     <img src="/images/camera.png" alt="">
                     <div class="boxes--element_text">
                         <h3 class="boxes--element_title">Lorem, ipsum.</h3>
                         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
-                        <a href="#">read more</a>
                     </div>
+                    <a href="https://www.instagram.com/p/Cj6Ka_NtRvn/?igshid=ZmRlMzRkMDU=">read more</a>
                 </div>
                 <div class="boxes--element">
                     <img src="/images/tramway.jpg" alt="">
                     <div class="boxes--element_text">
                         <h3 class="boxes--element_title">Lorem, ipsum.</h3>
                         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
-                        <a href="#">read more</a>
                     </div>
+                    <a href="https://www.instagram.com/p/CcYK46RMava/?igshid=ZmRlMzRkMDU=">read more</a>
                 </div>
             </div>
         </div>
